--- a/configuration.prod.yaml
+++ b/configuration.prod.yaml
@@ -1,5 +1,10 @@
 apimServiceName: apiopsprdapimlab
+namedValues:
+  - name: environment
+    properties:
+      displayName: environment
+      value: prod
 apis:
   - name: colors-api
     properties:
-      serviceUrl: http://52.188.92.106
+      serviceUrl: http://colors-api-prd.azurelaboratory.com
